gcc/testsuite/gdc.test/compilable/imports/test71.d
module imports_test71;
import imports = object;

void foo()
{
}
