gcc/testsuite/gdc.test/fail_compilation/fail7603a.d
void test(ref bool val = true) { }
